--- a/Translation/item.json
+++ b/Translation/item.json
@@ -421,7 +421,7 @@
         "en":"Gold Pile",
         "fr":"Pile d'Or",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"金币",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3480,7 +3480,7 @@
         "en":"[Spirit Egg] Poacher",
         "fr":"[Oeuf d'esprit] Braconnier",
         "es":"",
-        "zh-cn":""[精灵蛋] 盗猎者",
+        "zh-cn":"[精灵蛋] 盗猎者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3499,7 +3499,7 @@
         "en":"[Spirit Egg] Bandit",
         "fr":"[Oeuf d'esprit] Bandit",
         "es":"",
-        "zh-cn":""[精灵蛋] 强盗",
+        "zh-cn":"[精灵蛋] 强盗",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9099,7 +9099,7 @@
         "en":"Cracked Yellow Celebeam",
         "fr":"Celebeam Jaune Fissuré",
         "es":"",
-        "zh-cn":"破碎的黄色魔晶石",
+        "zh-cn":"黄色魔晶碎片",
         "zh-tw":"",
         "kr":"",
         "ru":"Треснутый Жёлтый Кристалл",
@@ -9118,7 +9118,7 @@
         "en":"Cracked Red Celebeam",
         "fr":"Celebeam Rouge Fissuré",
         "es":"",
-        "zh-cn":"破碎的红色魔晶石",
+        "zh-cn":"红色魔晶碎片",
         "zh-tw":"",
         "kr":"",
         "ru":"Треснутый Красный Кристалл",
@@ -9137,7 +9137,7 @@
         "en":"Cracked Blue Celebeam",
         "fr":"Celebeam Bleu Fissuré",
         "es":"",
-        "zh-cn":"破碎的蓝色魔晶石",
+        "zh-cn":"蓝色魔晶碎片",
         "zh-tw":"",
         "kr":"",
         "ru":"Треснутый Голубой Кристалл",
@@ -9156,7 +9156,7 @@
         "en":"Crude Yellow Celebeam",
         "fr":"Celebeam Jaune Brut",
         "es":"",
-        "zh-cn":"粗糙的黄色魔晶石",
+        "zh-cn":"黄色粗糙魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Грубый Жёлтый Кристалл",
@@ -9175,7 +9175,7 @@
         "en":"Crude Red Celebeam",
         "fr":"Celebeam Rouge Brut",
         "es":"",
-        "zh-cn":"粗糙的红色魔晶石",
+        "zh-cn":"红色粗糙魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Грубый Красный Кристалл",
@@ -9194,7 +9194,7 @@
         "en":"Crude Blue Celebeam",
         "fr":"Celebeam Bleu Brut",
         "es":"",
-        "zh-cn":"粗糙的蓝色魔晶石",
+        "zh-cn":"蓝色粗糙魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Грубый Голубой Кристалл",
@@ -9213,7 +9213,7 @@
         "en":"Yellow Celebeam",
         "fr":"Celebeam Jaune",
         "es":"",
-        "zh-cn":"黄色魔晶石",
+        "zh-cn":"黄色魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Жёлтый Кристалл",
@@ -9232,7 +9232,7 @@
         "en":"Red Celebeam",
         "fr":"Celebeam Rouge",
         "es":"",
-        "zh-cn":"红色魔晶石",
+        "zh-cn":"红色魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Красный Кристалл",
@@ -9251,7 +9251,7 @@
         "en":"Blue Celebeam",
         "fr":"Celebeam Bleu",
         "es":"",
-        "zh-cn":"蓝色魔晶石",
+        "zh-cn":"蓝色魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Голубой Кристалл",
@@ -9270,7 +9270,7 @@
         "en":"Perfect Yellow Celebeam",
         "fr":"Celebeam Jaune Parfaite",
         "es":"",
-        "zh-cn":"完美的黄色魔晶石",
+        "zh-cn":"黄色完美魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Отличный Жёлтый Кристалл",
@@ -9289,7 +9289,7 @@
         "en":"Perfect Red Celebeam",
         "fr":"Celebeam Rouge Parfaite",
         "es":"",
-        "zh-cn":"完美的红色魔晶石",
+        "zh-cn":"红色完美魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Отличный Красный Кристалл",
@@ -9308,7 +9308,7 @@
         "en":"Perfect Blue Celebeam",
         "fr":"Celebeam Bleu Parfaite",
         "es":"",
-        "zh-cn":"完美的蓝色魔晶石",
+        "zh-cn":"蓝色完美魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Отличный Голубой Кристалл",
@@ -9327,7 +9327,7 @@
         "en":"Glittery Yellow Celebeam",
         "fr":"Celebeam Jaune Scintillante",
         "es":"",
-        "zh-cn":"华丽的黄色魔晶石",
+        "zh-cn":"黄色闪烁魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Блестящий Жёлтый Кристалл",
@@ -9346,7 +9346,7 @@
         "en":"Glittery Red Celebeam",
         "fr":"Celebeam Rouge Scintillante",
         "es":"",
-        "zh-cn":"华丽的红色魔晶石",
+        "zh-cn":"红色闪烁魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Блестящий Красный Кристалл",
@@ -9365,7 +9365,7 @@
         "en":"Glittery Blue Celebeam",
         "fr":"Celebeam Bleu Scintillante",
         "es":"",
-        "zh-cn":"华丽的蓝色魔晶石",
+        "zh-cn":"蓝色闪烁魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Блестящий Голубой Кристалл",
@@ -9384,7 +9384,7 @@
         "en":"Glorious Yellow Celebeam",
         "fr":"Celebeam Jaune Glorieuse",
         "es":"",
-        "zh-cn":"辉煌的黄色魔晶石",
+        "zh-cn":"黄色辉煌魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Славный Жёлтый Кристалл",
@@ -9403,7 +9403,7 @@
         "en":"Glorious Red Celebeam",
         "fr":"Celebeam Rouge Glorieuse",
         "es":"",
-        "zh-cn":"辉煌的红色魔晶石",
+        "zh-cn":"红色辉煌魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Славный Красный Кристалл",
@@ -9422,7 +9422,7 @@
         "en":"Glorious Blue Celebeam",
         "fr":"Celebeam Bleu Glorieuse",
         "es":"",
-        "zh-cn":"辉煌的蓝色魔晶石",
+        "zh-cn":"蓝色辉煌魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Славный Голубой Кристалл",
@@ -9441,7 +9441,7 @@
         "en":"Dazzling Yellow Celebeam",
         "fr":"Celebeam Jaune Éblouissante",
         "es":"",
-        "zh-cn":"耀眼的黄色魔晶石",
+        "zh-cn":"黄色炫目魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Ослепительный Жёлтый Кристалл",
@@ -9460,7 +9460,7 @@
         "en":"Dazzling Red Celebeam",
         "fr":"Celebeam Rouge Éblouissante",
         "es":"",
-        "zh-cn":"耀眼的红色魔晶石",
+        "zh-cn":"红色炫目魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Ослепительный Красный Кристалл",
@@ -9479,7 +9479,7 @@
         "en":"Dazzling Blue Celebeam",
         "fr":"Celebeam Bleu Éblouissante",
         "es":"",
-        "zh-cn":"耀眼的蓝色魔晶石",
+        "zh-cn":"蓝色炫目魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Ослепительный Голубой Кристалл",
@@ -9498,7 +9498,7 @@
         "en":"Ultimate Yellow Celebeam",
         "fr":"Celebeam Jaune Ultime",
         "es":"",
-        "zh-cn":"极品黄色魔晶石",
+        "zh-cn":"黄色极品魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Совершенный Жёлтый Кристалл",
@@ -9517,7 +9517,7 @@
         "en":"Ultimate Red Celebeam",
         "fr":"Celebeam Rouge Ultime",
         "es":"",
-        "zh-cn":"极品红色魔晶石",
+        "zh-cn":"红色极品魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Совершенный Красный Кристалл",
@@ -9536,7 +9536,7 @@
         "en":"Ultimate Blue Celebeam",
         "fr":"Celebeam Bleu Ultime",
         "es":"",
-        "zh-cn":"极品蓝色魔晶石",
+        "zh-cn":"蓝色极品魔晶",
         "zh-tw":"",
         "kr":"",
         "ru":"Совершенный Голубой Кристалл",
@@ -9555,7 +9555,7 @@
         "en":"Yellow Topaz",
         "fr":"Topaz Jaune",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"黄托帕石",
         "zh-tw":"",
         "kr":"",
         "ru":"Жёлтый Топаз",
@@ -9574,7 +9574,7 @@
         "en":"Red Topaz",
         "fr":"Topaz Rouge",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"红托帕石",
         "zh-tw":"",
         "kr":"",
         "ru":"Красный Топаз",
@@ -9593,7 +9593,7 @@
         "en":"Blue Topaz",
         "fr":"Topaz Bleu",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"蓝托帕石",
         "zh-tw":"",
         "kr":"",
         "ru":"Голубой Топаз",
@@ -9612,7 +9612,7 @@
         "en":"Goblin Stick",
         "fr":"Bâton de Goblin",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"哥布林棍棒",
         "zh-tw":"",
         "kr":"",
         "ru":"Гоблинская Палка",
@@ -9631,7 +9631,7 @@
         "en":"General Ring",
         "fr":"Anneau du Général",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"将军指环",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9650,7 +9650,7 @@
         "en":"Silver Fur",
         "fr":"Fourrure Argentée",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"银色毛皮",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9669,7 +9669,7 @@
         "en":"Bee Stinger",
         "fr":"Dard d'abeille",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"蜂刺",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9688,7 +9688,7 @@
         "en":"Undead Liquid",
         "fr":"Liquide Mort vivant",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"不死液体",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9707,7 +9707,7 @@
         "en":"Manticore's Stinger",
         "fr":"Dard de Manticore",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"人面兽尾刺",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9726,7 +9726,7 @@
         "en":"Corrupted Heart",
         "fr":"Coeur Corrompu",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"堕落之心",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9745,7 +9745,7 @@
         "en":"Rusty Hook",
         "fr":"Crochet Rouillé",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"胡克的钩子",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9764,7 +9764,7 @@
         "en":"Desert Manticore's Stinger",
         "fr":"Dard de Manticore Désertique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"沙蝎毒刺",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9783,7 +9783,7 @@
         "en":"Wisdom Orb",
         "fr":"Orbe de Sagesse",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"智慧宝珠",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9802,7 +9802,7 @@
         "en":"Greed Crystal",
         "fr":"Cristal de Cupidité",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"贪婪水晶",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9821,7 +9821,7 @@
         "en":"Pioneer Shield",
         "fr":"Bouclier de Pionnier",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"先锋之盾",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9840,7 +9840,7 @@
         "en":"Balrog Flame",
         "fr":"Flame de Balrog",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"炎魔之焰",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9859,7 +9859,7 @@
         "en":"Strange Eye",
         "fr":"Oeil Etrange",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"奇异之眼",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9878,7 +9878,7 @@
         "en":"Lava Heart",
         "fr":"Coeur de Lave",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"熔岩之心",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9897,7 +9897,7 @@
         "en":"Red Petals",
         "fr":"Pétales Rouge",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"红色花瓣",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9916,7 +9916,7 @@
         "en":"Dragon's Claw",
         "fr":"Griffe de Dragon",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"龙爪",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9935,7 +9935,7 @@
         "en":"Fairy's Wings",
         "fr":"Ailes de Fée",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"妖精羽翼",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9954,7 +9954,7 @@
         "en":"Swamp Saint's Panties",
         "fr":"Culotte de Sainte des Marais",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"沼泽圣徒内裤",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9973,7 +9973,7 @@
         "en":"Family Photo",
         "fr":"Photo de Famille",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"家庭照片",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9992,7 +9992,7 @@
         "en":"Octopus' Eyes",
         "fr":"Yeux de Poulpe",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"章鱼眼球",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -10011,7 +10011,7 @@
         "en":"Leader's certificate",
         "fr":"Certificat de chef",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"领袖之证",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -10030,7 +10030,7 @@
         "en":"Blessing of the Water Spirit",
         "fr":"Bénédiction de l'Ésprit de l'Eau",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"水灵祝福",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -10049,7 +10049,7 @@
         "en":"Technician's ID",
         "fr":"Badge de technicien",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"技工身份证",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -10068,7 +10068,7 @@
         "en":"Snow Unicorn",
         "fr":"Licorne des neiges",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"雪独角兽",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -10087,7 +10087,7 @@
         "en":"Frost Dragon's Tail",
         "fr":"Queue de Dragon de Givre",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"霜龙尾巴",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -10106,7 +10106,7 @@
         "en":"Heroic proof",
         "fr":"Preuve héroïque",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"英勇证明",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -10685,6 +10685,25 @@
         "jp":"",
         "pt":"",
         "vi":"Lõi Dung Nham",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.12004.name":{
+        "en":"Spirit Wisdom Book",
+        "fr":"Livre de Sagesse d'Esprit",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11455,7 +11474,7 @@
         "en":"Mother Brand Cloak",
         "fr":"Manteau de Marque Mère",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"母牌斗篷",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11493,7 +11512,7 @@
         "en":"Pig Tongue Interpreter",
         "fr":"Interprète en Langue Porcine",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"猪语者",
         "zh-tw":"",
         "kr":"",
         "ru":"Переводчик Языка Свиньи",
@@ -11531,7 +11550,7 @@
         "en":"Guild Ressource",
         "fr":"Ressource de Guilde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"公会资源",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11550,7 +11569,7 @@
         "en":"Cherished Dew",
         "fr":"Rosée Chérie",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"珍爱之露",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11569,7 +11588,7 @@
         "en":"Rockcord",
         "fr":"Rochecorde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"岩",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11588,7 +11607,7 @@
         "en":"Enlightened Orb",
         "fr":"Orbe Illuminé",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"启灵宝珠",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11607,7 +11626,7 @@
         "en":"Round Mushroom",
         "fr":"Champignon Rond",
         "es":"",
-        "zh-cn":"蘑菇",
+        "zh-cn":"圆蘑菇",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11626,7 +11645,7 @@
         "en":"Devil Staff",
         "fr":"Bâton Maléfique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"恶魔法杖",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11645,7 +11664,7 @@
         "en":"Earthcord",
         "fr":"Tercorde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"土",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11664,7 +11683,7 @@
         "en":"Firecord",
         "fr":"Lavcorde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"火",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11683,7 +11702,7 @@
         "en":"Woodcord",
         "fr":"Boiscorde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"木",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11702,7 +11721,7 @@
         "en":"Telluric Water",
         "fr":"Eau Tellurique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"地下水",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11721,7 +11740,7 @@
         "en":"Telluric Ice",
         "fr":"Glace Tellurique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"大地之冰",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11740,7 +11759,7 @@
         "en":"Telluric Gear",
         "fr":"Engrenage Tellurique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"大地之齿",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -11759,7 +11778,7 @@
         "en":"Telluric Source",
         "fr":"Source Tellurique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"大地之源",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -13826,6 +13845,25 @@
         "th":"",
         "id":""
     },
+    "item.41024.name":{
+        "en":"Spirit Skill Seal",
+        "fr":"Sceau de Compétence d'Esprit",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.7300.description":{
         "en":"Increase Attack Speed by 15% and crit chance by 5%. Lasts for 30 min.",
         "fr":"Augmente la vitesse d'attaque de 15 % et les chances de coup critique de 5 %. Dure 30 min.",
@@ -15442,10 +15480,10 @@
         "id":""
     },
     "item.35014.description":{
-        "en":"Right click to get :<br> - Greater Healing Potion x 10<br> - Greater Magic Potion x 10<br> - Mini Teleport Crystal<br>- Black Magic x 3000 x 4000",
+        "en":"Right click to get :<br> - Greater Healing Potion x 10<br> - Greater Magic Potion x 10<br> - Mini Teleport Crystal<br> - Black Magic x 4000",
         "fr":"Click droit pour obtenir:<br> - Grande Potion de Guérison x 10<br> - Grande Potion de Mana x 10<br> - Mini Cristal de Téléportation<br> - Magie Noire x 4000",
         "es":"",
-        "zh-cn":""右键点击获得 :<br> -大型治疗药水x 10<br> -大型魔力药水x 10<br> - 迷你传送水晶<br> - 魔能x 4000"",
+        "zh-cn":"右键点击获得 :<br> -大型治疗药水x 10<br> -大型魔力药水x 10<br> - 迷你传送水晶<br> - 魔能x 4000",
         "zh-tw":"",
         "kr":"",
         "ru":"",
