--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1333,7 +1333,7 @@
         "en":"Miss",
         "fr":"Raté",
         "es":"",
-        "zh-cn":"未命中",
+        "zh-cn":"Miss",
         "zh-tw":"",
         "kr":"",
         "ru":"",
