--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4028,8 +4028,8 @@
         "id":""
     },
     "item.3067.name":{
-        "en":"[Spirit Egg] Elite Fiery Guardian",
-        "fr":"[Oeuf d'esprit] Gardien ardent d'élite",
+        "en":"[Spirit Egg] Fiery Guardian",
+        "fr":"[Oeuf d'esprit] Gardien ardent",
         "es":"",
         "zh-cn":"[精灵蛋] 精锐火焰护卫",
         "zh-tw":"",
