--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -478,7 +478,7 @@
         "en":"Base attribute value: {0}",
         "fr":"Valeur de base de l'attribut: {0}",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"基本属性值: {0}",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -497,7 +497,7 @@
         "en":"Additional gain from equipment: {0}%",
         "fr":"Gain supplémentaire de l'équipement: {0}%",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"装备额外加成: {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -516,7 +516,7 @@
         "en":"Additional gain from talents: {0}%",
         "fr":"Gain supplémentaire des talents: {0}%",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"天赋额外加成: {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -535,7 +535,7 @@
         "en":"Additional gain from buffs: {0}%",
         "fr":"Gain supplémentaire des buffs: {0}%",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"状态额外加成: {0}%",
         "zh-tw":"",
         "kr":"",
         "ru":"",
