--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13864,6 +13864,44 @@
         "th":"",
         "id":""
     },
+    "item.41025.name":{
+        "en":"Advanced Wing Fortify Gem",
+        "fr":"Gemme de Fortification d'Ailes Avancée",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41026.name":{
+        "en":"Advanced Mount EVO Gem",
+        "fr":"Gemme d'Evolution de Monture Avancée",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.7300.description":{
         "en":"Increase Attack Speed by 15% and crit chance by 5%. Lasts for 30 min.",
         "fr":"Augmente la vitesse d'attaque de 15 % et les chances de coup critique de 5 %. Dure 30 min.",
