--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13902,6 +13902,196 @@
         "th":"",
         "id":""
     },
+    "item.70000.name":{
+        "en":"Floating Rock - I",
+        "fr":"Rocher Volant - I",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - I",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.70001.name":{
+        "en":"Floating Rock - I",
+        "fr":"Rocher Volant - I",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - I",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.70002.name":{
+        "en":"Floating Rock - I",
+        "fr":"Rocher Volant - I",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - I",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.70003.name":{
+        "en":"Floating Rock - II",
+        "fr":"Rocher Volant - II",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - II",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.70004.name":{
+        "en":"Floating Rock - II",
+        "fr":"Rocher Volant - II",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - II",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.70005.name":{
+        "en":"Floating Rock - II",
+        "fr":"Rocher Volant - II",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - II",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.70006.name":{
+        "en":"Floating Rock - III",
+        "fr":"Rocher Volant - III",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - III",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.70007.name":{
+        "en":"Floating Rock - III",
+        "fr":"Rocher Volant - III",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - III",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.70008.name":{
+        "en":"Floating Rock - III",
+        "fr":"Rocher Volant - III",
+        "es":"",
+        "zh-cn":"浮石 - I",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Phiến Đá Nổi - III",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1200.description":{
+        "en":"I'm pursuing speed",
+        "fr":"je recherche la vitesse",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.7300.description":{
         "en":"Increase Attack Speed by 15% and crit chance by 5%. Lasts for 30 min.",
         "fr":"Augmente la vitesse d'attaque de 15 % et les chances de coup critique de 5 %. Dure 30 min.",
