--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2906,6 +2906,44 @@
         "th":"",
         "id":""
     },
+    "item.1209.name":{
+        "en":"White Skeleton",
+        "fr":"Squelette Blanc",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1210.name":{
+        "en":"Black Skeleton",
+        "fr":"Squelette Noir",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.1300.name":{
         "en":"Dragon Wings",
         "fr":"Ailes de Dragon",
