--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2944,6 +2944,63 @@
         "th":"",
         "id":""
     },
+    "item.1211.name":{
+        "en":"Yellow Beetle",
+        "fr":"Scarabée Jaune",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1212.name":{
+        "en":"Light Purple Beetle",
+        "fr":"Scarabée Violet Clair",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1213.name":{
+        "en":"Purple Beetle",
+        "fr":"Scarabée Violet",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.1300.name":{
         "en":"Dragon Wings",
         "fr":"Ailes de Dragon",
@@ -14266,6 +14323,25 @@
     "item.1206.description":{
         "en":"This airplane is the only existing one in Mirelia, enjoy the ride.",
         "fr":"Cet avion est le seul existant dans les contrées de Mirelia, profitez-en.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1211.description":{
+        "en":"This insect never fatigue.",
+        "fr":"Cet insecte n'est jamais fatigué.",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
