--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3001,6 +3001,63 @@
         "th":"",
         "id":""
     },
+    "item.1214.name":{
+        "en":"Blue Snakebird",
+        "fr":"Serpoiseau Bleu",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1215.name":{
+        "en":"Purple Snakebird",
+        "fr":"Serpoiseau Violet",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1216.name":{
+        "en":"Yellow Snakebird",
+        "fr":"Serpoiseau Jaune",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.1300.name":{
         "en":"Dragon Wings",
         "fr":"Ailes de Dragon",
@@ -14342,6 +14399,25 @@
     "item.1211.description":{
         "en":"This insect never fatigue.",
         "fr":"Cet insecte n'est jamais fatigué.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1214.description":{
+        "en":"<i>It's a snake! No it's a bird! No, it's a Snakebird!!!</i>",
+        "fr":"<i>C'est un seprent! Non c'est un oiseau! Non, c'est un Serpoiseau!!!</i>",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
