--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3058,6 +3058,82 @@
         "th":"",
         "id":""
     },
+    "item.1217.name":{
+        "en":"Grey Magical Rock",
+        "fr":"Rocher Magique Grise",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1218.name":{
+        "en":"Brown Magical Rock",
+        "fr":"Rocher Magique Marron",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1219.name":{
+        "en":"Green Magical Rock",
+        "fr":"Rocher Magique Vert",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1220.name":{
+        "en":"Phoenix",
+        "fr":"Phoenix",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.1300.name":{
         "en":"Dragon Wings",
         "fr":"Ailes de Dragon",
@@ -14418,6 +14494,44 @@
     "item.1214.description":{
         "en":"<i>It's a snake! No it's a bird! No, it's a Snakebird!!!</i>",
         "fr":"<i>C'est un seprent! Non c'est un oiseau! Non, c'est un Serpoiseau!!!</i>",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1217.description":{
+        "en":"A magical vehicle made of Celebeam",
+        "fr":"Un vehicule magique fait en Celebeam",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1220.description":{
+        "en":"This mythical creature is the most beautiful someone can get.",
+        "fr":"Cette créature mythique est la plus belle que l'on puisse posseder.",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
