--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3134,6 +3134,63 @@
         "th":"",
         "id":""
     },
+    "item.1221.name":{
+        "en":"Blue Kite",
+        "fr":"Cerf-volant Bleu",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1222.name":{
+        "en":"Orange Kite",
+        "fr":"Cerf-volant Orange",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1223.name":{
+        "en":"White Kite",
+        "fr":"Cerf-volant Blanc",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.1300.name":{
         "en":"Dragon Wings",
         "fr":"Ailes de Dragon",
